<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.gallopnyc.com.gallopnyc.VolunteerActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/volunteerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:scaleType="centerCrop"
            android:src="@drawable/volunteer"
            tools:layout_marginLeft="0dp"
            tools:layout_marginRight="0dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/buenard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/volunteertxt1"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/buenard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/volunteertxt2"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/buenard"
            android:paddingLeft="15dp"
            android:text="@string/volunteertxt3"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/buenard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/volunteertxt4"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="141dp"
            android:layout_height="31dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/volunteertxt5"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="174dp"
            android:layout_height="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/buenard"
            android:text="@string/volunteertxt6"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/buenard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/volunteertxt7"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="143dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="Search Here"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/volunteerimgtxt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>